Fix footer padding on safari

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -23,14 +23,6 @@ nav
   display: flex
   margin: 30px 0 40px
 
-footer
-  display: flex
-  height: 25px
-  justify-content: center
-
-  .link
-    margin: 0 10px
-
 h1,
 h2,
 h3,
@@ -151,6 +143,14 @@ button
 
 .share-link
   padding: 10px
+
+.footer-wrapper
+  display: flex
+  height: 25px
+  justify-content: center
+
+  .link
+    margin: 0 10px
 
 .modal-wrapper
   background-color: $color-black-70
